[package]
name = "ensure"
version = "0.1.0"
authors = ["echnobas <echnobas.git@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.7.2"
regex = "1.5.3"
rss = "1.10.0"
structopt = "0.3.21"
ureq = "2.1.1"
